# QURAN_TOKENIZED

./: .env.dev  .env.example  .env.prod  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  IMPLEMENTATION_HANDOFF.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  NAVIGATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  PHASE_1_3_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  TOKENIZATION_TEST_RESULTS.md  TROUBLESHOOTING.md  VISUAL_MOCKUP.md  alembic.ini  debug_corpus.html  debug_corpus_dict_Alh.html  debug_corpus_dict_Hmd.html  debug_corpus_dict_ktb.html  debug_corpus_dict_rHm.html  debug_corpus_dict_smw.html  debug_corpus_word.html  debug_الرحمن.html  debug_الله.html  debug_كتاب.html  debug_يؤمنون.html  pdf_analysis_results.json  pyproject.toml  quran.db  requirements.txt  setup_and_run.ps1  test_stats.py  tokens_sample.json
alembic/: env.py
backend/: __init__.py  cache.py  config.py  db.py  logging_config.py  main.py  metrics.py  root_extraction_config.py  worker.py
data/: quran_original_text.txt  root_assignments_for_review.json
docs/: ARABIC_ROOT_SOURCES.md  CODE_OPTIMIZATION_PLAN.md  DESIGN_REVIEW_PLAN.md  MULTI_SOURCE_ROOT_EXTRACTION.md  OFFLINE_CORPUS_CACHE.md  ROOT_CROSSCHECK_GUIDE.md  ROOT_REVIEW_AGENT_GUIDE.md
scripts/: analyze_pdf_dictionaries.py  apply_crosscheck_corrections.py  build_comprehensive_roots.py  build_corpus_cache.py  check_db_tokens.py  check_extraction_progress.py  check_stats.py  clear_database.py  clear_placeholder_roots.py  clear_sura1_roots.py  debug_corpus_positions.py  download_complete_quran.py  (+42 more)
(+45 files in other folders)
